Sky hitbox fixed - 17/41/19 - 9:35
Solen overlapper nu skyens hitbox, så man ikke afspiller skyens lyd, når man klikker på solen.

--- a/StormAppCSS.css
+++ b/StormAppCSS.css
@@ -40,7 +40,7 @@
     position: relative;
     height: 50%;
     width: 50%;
-    top: -380px;
+    top: -550px;
     left: 600px;
 }
 
@@ -48,6 +48,6 @@
     position: relative;
     height: 50%;
     width: 50%;
-    top: -620px;
+    top: -280px;
     left: 30px;
 }
